--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  razorpay_flutter: ^1.2.7  
 
   url_launcher: ^6.0.8
   provider: ^5.0.0
+  
 
 
   # The following adds the Cupertino Icons font to your application.
